---------------------------------------------------------------------------------------------------
Version: 0.2.16
Date: ????
  Fixes:
    - Fixed filtering mining drill resources when product name is different
---------------------------------------------------------------------------------------------------
Version: 0.2.15
Date: 2025-04-21
  Changes:
    - Support for getting inventory of proxy containers
  Bugfixes:
    - Don't crash on getting inventory of proxy containers
---------------------------------------------------------------------------------------------------
Version: 0.2.14
Date: 2025-04-01
  Changes:
    - Added support for requested quality modules on crafting machines
  Bugfixes:
    - Actually support fluid filters on fluid mining drills. Fixed bad commit.
    - Do not crash on ghost loaders
---------------------------------------------------------------------------------------------------
Version: 0.2.13
Date: 2025-03-31
  Changes:
    - Support ghost entities
    - Support fluid filters on fluid mining drills
  Bugfixes:
    - Do not crash on proxy-containers
---------------------------------------------------------------------------------------------------
Version: 0.2.12
Date: 2025-01-11
  Bugfixes:
    - Fixed crashes relating to entity ghosts
---------------------------------------------------------------------------------------------------
Version: 0.2.11
Date: 2024-12-31
  Changes:
    - Support output filter of spoiled fuel
---------------------------------------------------------------------------------------------------
Version: 0.2.10
Date: 2024-12-28
  Bugfixes:
    - Fixed crash when opening infinity chest with multiple filter slots
---------------------------------------------------------------------------------------------------
Version: 0.2.9
Date: 2024-11-17
  Bugfixes:
    - Added missing "valid" check on gui click
  Changes:
    - Added tooltip for pipette