@@ -7,3 +7,9 @@ filters-full=Filters full
 filters-empty=Filters empty
 requests-full=Requests full
 requests-empty=Requests empty
+
+[mod-setting-name]
+fh-set-filter-on-inserter=Enable filters when setting filter for inserter
+
+[mod-setting-description]
+fh-set-filter-on-inserter=Enables the "Use filters" checkbox when setting a filter to an inserter
