@@ -1,0 +1,9 @@
+data:extend {
+    {
+        type = "bool-setting",
+        name = "fh-set-filter-on-inserter",
+        setting_type = "runtime-global",
+        default_value = true,
+        order = "a",
+    },
+}
